--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root,
+tui-root {
+  --tui-primary: theme('colors.green.800');
+  --tui-link: theme('colors.green.800');
+}
